Work continued with the translation

--- a/euqrs.html
+++ b/euqrs.html
@@ -45,7 +45,7 @@ translated: 2024-03-16
 <img src="f/se.gif" width="30" height="20" alt="SV"></a>
 <h3>Allmänt</h3>
 <p>EUCW bjuder hjärtligt in alla radioamatörer och SWLs att vara med i
-  den årliga EUCW QRS-veckan.  Det här är inte en contest, tvärtom är
+  den årliga EUCWs QRS-vecka.  Det här är inte en contest, tvärtom är
   det en inbjudan till minska hastigheten och njuta av aktivitet i
   långsam morse-takt under fem dagar.  Dagarna är valda för att
   undvika de contest fyllda veckosluten.  Målet är inte att visa upp
@@ -60,7 +60,7 @@ translated: 2024-03-16
 <p>EUCWs QRS-vecka har en historia som sträcker sig ända tillbaka till
   2001 när den infördes av FISTS.  EUCW tackar FISTS för denna
   förträffliga ide och för att hantera allt arbete under det första
-  decenniet.  Sedan 2012 organiseras EUCW QRS-veckan av AGCW.  Ett
+  decenniet.  Sedan 2012 organiseras EUCWs QRS-vecka av AGCW.  Ett
   erkännande delas ut till de mest aktiva deltagarna.</p>
 <p>De som vill kan markera deltagare som utmärker sig med upp till tre
   röster för den "mest läsbara telegrafin" (en röst per station).  Om du
@@ -136,107 +136,126 @@ och listan av QSO.</p>
 </pre>
 <p>
 
-You are encouraged to add as much detail as you wish. You may
-wish to document details of your transmission such as alternative
-QTHs (a station in Chelmsford may have the habit to identify the
-town only in UK contacts, while the op might use "ESSEX" as qth
-with EU and "NR LONDON" with DX). Some may vary their handle, e.g.
-a DL may use Karl-Heinz locally, Karl inside DL, and Chas for DX.
-If you choose to be inconsistent when you identify your club you
-may wish to mention this, too. The added-value would be that
-additional detail is useful for (potential) SWL logs. Last but not
-least you should tell me whether you prefer an electronic
-recognition (PDF) or one one paper just in case you turn out to be
-one of the most active stations</p>
-<h3>LOG QSO DATA</h3>
-<pre>
-    Minimum QSO list columns 
+Du kan lägga till så mycket information som du vill.  Du kan
+dokumentera detaljer om dina sändningar så som till exempel
+alternativa QTH (en station i Södertälje kanske har för vana att ange
+staden som QTH i kontakt med svenska stationer medan QTH:t anges som
+NR STOCKHOLM i kontakt med andra länder.  Några kanske angera olika
+namn så som Lennart i kontakt med svenskar, Lenny i kontakter med
+europa och Len i kontakt med DX.  Om du väljer att identifiera den
+klubb du är med i på ett inkonsistent sätt så kanske du ska ange det
+också.  Den här extra informationen är mycket användbar för
+potentiella SWL-loggar.  Slutligen bör du berätta om du vill ha ett
+elektroniskt erkännande (PDF) eller ett erkännande på papper om det
+visar sig att du är en av de mest aktiva stationerna.</p>
 
-    1) Date (as YYYYMMDD) 
-    2) Time as UTC (as HHMM) 
-    3) Call (other stn) 
+<h3>LOG QSO DATA</h3>
+
+<p>Åtminstone följande information ska finnas för varje QSO:</p>
+
+<pre>
+
+    1) Datum (anges som YYYYMMDD) 
+    2) Tid i UTC (som HHMM) 
+    3) Anropssignal (för den andra stationen) 
     4) Band 
     5) Mode (=CW) 
-    6) RST given to other stn 
-    7) RST received fm other stn 
-    8) Name received fm other stn 
-    9) QTH of other stn given on air
+    6) RST som gavs till den andra stationen
+    7) RST mottaget från den andra stationen
+    8) Namn mottaget från den andra stationen
+    9) QTH mottaget från den andra stationen
+</pre>
 
-Try to avoid logging software which fills name and qth fields out of
-call book or Internet lookups. Instead, log what you hear on the air.
-</pre>
-<p>For RST given, RST received, Name, and QTH, the columns must be
-included but incorrect or missing values in them are acceptable.
-You are encouraged to add as much detail as you wish, e.g. tx, ant,
-wx of the other stn</p>
-<h3>LOG SUBMISSION</h3>
-<p>LOG SUBMISSION depends on your logging style. One of three cases
-apply.</p>
+<p>Försök undvika loggprogramvara som fyller i namn och QTH från
+  uppslagningar i Callbook eller på Internet.  Skriv istället ner det
+  som du tar emot under kontakten.</p>
+
+<p>För sänd RST, mottagen RST, Namn och QTH så måste kolumnerna finnas
+  med men felaktiga eller saknade värden är acceptabelt.  Du
+  uppmuntras att skriva så mycket information som du vill, till
+  exempel sändare, antenn, väder hos den andra stationen.</p>
+
+<h3>HUR DU SKICKAR IN LOGGEN</h3>
+<p>Hur du skickar in loggen beror på hur du loggar kontakterna.  Det
+  finns tre möjliga fall.</p>
 <pre>
-    I) You master log is created by a computer.
-       <a href="euqrsi.html">Click here for example log I</a>
-    II) You are logging on paper but you have Internet access.  
-       <a href="euqrsii.html">Click here for example log II</a>
-    III) Paper logging and log submission on paper.
-       <a href="euqrsiii.html">Click here for example log III</a>
+    I) Din logg är skapad på datorn.
+       <a href="https://eucw.org/euqrsi.html">Här finns ett exempel för loggen I)</a>
+    II) Din har loggat på papper men du har Internet access.  
+       <a href="https://eucw.org/euqrsii.html">Här finns ett exempel för en sådan logg II)</a>
+    III) Logg på papper och loggen skickas in på papper.
+       <a href="https://eucw.org/euqrsiii.html">Här finns ett sådant exempel logg III)</a>
 </pre>
-<p>I) Users of logging software export their log as ADIF files
-(extension .adi) and verify the presence of the minimum data.
-Please do not forget to add the header data and put them in the
-text of your email. NOTE: Check the ADIF file visually for the
-presence of all elements, some ADIF creators may omit relevant
-fields. BEST PRACTICE: Download the FISTS Log Converter and use it
-to post-process your log (See chapter RECOMMENDED SOFTWARE).</p>
-<p>II) If you transfer a log manually the best choice is to pass
-the data to a logging software and export as ADIF as above. If you
-wish to create your files manually from scratch with an editor or
-spread sheet software please create .txt or .csv files in plain
-ASCII code that do not require a particular software. If asked for
-a delimiter choose semicolon. Don't forget the header data.</p>
-<p>III) Manual Logs are quite ok, the least painful procedure is to
-go to a copy shop and to draw photocopies from the original log.
-Another idea is to ask a relative or friend to take a picture of
-the log, verify the readability and email it.</p>
-<p>The predominant idea is that any log is better than no log at
-all just as a partial qso is better than no qso. The EuCW QRS is
-primarily not a competition but an opportunity for CW newcomers and
-CW skeptics to enjoy Morse code without fear from excessive speeds.
-If you have a choice, please send a Log in format II. Some users
-find it hard not to use their spread sheet programs. If you belong
-to these, please fill all entries in all records and please use the
-yyyymmdd format.</p>
-<h3>RECOMMENDED SOFTWARE</h3>
-<p>http://fists.co.uk/members/membersflc.html The free FISTS Log
-Converter for Windows should be used to create log submissions for
-EuCW QRS Week. It can either read QSOs from an ADIF file exported
-from most logbook programs, or if you don't currently use a logbook
-program, its own logbook feature can be used to create an
-electronic log from scratch. Users of other operating systems may
-prefer logging style I. If you are using a modern logging software please
-switch off the autofill option adding name or qth by using a local or remote
-database. You must enter the on-air names and the qth used on air, otherwise
-a penalty is possible.
-</p>
-<h3>SEND LOGS TO</h3>
+
+<p>I) Användare av logg-programvara exporterar deras logg som
+  ADIF-filer (suffix .adi) och kollar att minst det förväntade datat
+  finns med.  Glöm inte att lägga till information till loggens
+  förstasida i texten i mailet.  Kom ihåg att kolla att ADIF-filen
+  innehåller allal element.  Vissa ADIF-skapar hoppar över relevanta
+  fält.  Tips, ladda ner FISTS Log-konverterar och använd den för att
+  efterprocessa loggen (Se kapitlet
+  <a href="#REKOMMENDERAD_MJUKVARA">REKOMMENDERAD MJUKVARA</a>).</p>
+
+<p>II) Om du översätter loggen manuellt är det äst att skicka datat
+  till en logg-programvara och exportera som ADIF på samma sätt som är
+  beskrivet ovan.  Om du vill skapa filerna manuellt från ingenting
+  med en editor eller spreadsheet-mjukvara, skapa .txt eller
+  .csv-filer kodade i ASCII-format så att det inte behövs någon
+  speciell mjukvara.  Om du kan välja avgränsare mellan fälten så välj
+  semikolon.  Glöm inte header-datat.</p>
+
+<p>III) Handskrivna loggar är helt ok.  Det minst jobbiga är att ta en
+  kopia på orignalloggen eller att be en släkting eller kompis att ta
+  en bild, kolla att det är läsbart och maila den.</p>
+
+<p>Huvudidén är att någon logg är bättre än ingen logg alls precis som
+  en del av ett QSO är bättre än inget QSO.  EUCWs QRS-vecka är i
+  första hand inte någon tavling utan ett tillfälle för nykomplingar
+  på telegrafi och personer som är skeptiska till telegrafi att njuta
+  av morse-kod utan risk för hög hastighet.  Om du har möjlighet att
+  välja så väl format II.  Vissa användare tycker det är svårt att
+  inte använda spreadsheet-program.  Om du är en av dem, fyll i all
+  information i alla fält och använda YYYYMMDD-formatet.</p>
+
+<h3><a name="REKOMMENDERAD_MJUKVARA">REKOMMENDERAD MJUKVARA</a></h3>
+<p><a href="http://fists.co.uk/members/membersflc.html">http://fists.co.uk/members/membersflc.html
+    Gratisprogrammet FISTS Log Converter for Windows</a> bör användas
+    för att skapa loggen för att skicka in i EUCWs QRS-vecka.  Det kan
+    antingen läsa QSO:n från en ADIF-fil exporterad från olika
+    loggningsprogram, eller, om du inte använder något
+    loggningsprogram, kan den inbyggda loggboksfunktionen användas för
+    att skapa en elektronisk loggbok.  De som använder andra
+    operativsystem kan föredra loggningen enligt alternativ I.  Om du
+    har ett modernt loggningsprogram så slå av funktionen som
+    automatiskt fyller i namn och QSO genom att använda lokala
+    databaser eller hämtar informationen från internet.  Du måste mata
+    in det namn och QTH som användes under QSO:t, annars kan det bli
+    avdrag.</p>
+
+<h3>SKICKAR LOGGAR TILL</h3>
 <img src="qrs.png" alt= "ik2-rmz">
-<h3>DEADLINE</h3>
-<p>Log must arrive not later than 31st May</p>
-<h3>FREQUENCY ACTIVITY CENTERS</h3>
-<p>Recommended area of activity +/- 10 kHz from the activity
-centers as follows:</p>
+<h3>SENAST</h3>
+<p>Loggar måste vara mottagna senast den 31:e maj.</p>
+<h3>REKOMMENDERADE FREKVENSER</h3>
+<p>Rekommendationen aktivitetsområde är +/- 10 kHz från
+  centerfrekvenserna enligt nedan:</p>
 <pre>
-    2m 144.065 MHz (avoid 144050 because of the E_s season)
-    6m Use any frequency compatible with the IARU band plan
-    10m 28.055 MHz (Recommended IARU frequency for QRS)
-    12m 24.905 MHz 
-    15m 21.055 MHz (Recommended IARU frequency for QRS)
+    2m 144.065 MHz (undvik 144050 p.g.a. E_s-säsongen)
+    6m Välj frekvens fritt enligt IARUs bandplan
+    10m 28.055 MHz (Rekommenderad IARU frekvens för QRS)
+    12m 24.905 MHz
+    15m 21.055 MHz (Rekommenderad IARU frekvens för QRS)
     17m 18.085 MHz 
-    20m 14.055 MHz (Recommended IARU frequency for QRS)
+    20m 14.055 MHz (Rekommenderad IARU frekvens för QRS)
     30m 10.125 MHz 
-    40m  7.035 MHz (stay in the exclusive CW band 7000-7040 kHz)
-    80m  3.555 MHz (Recommended IARU frequency for QRS) 
-    160m Use any frequency compatible with the IARU band plan
+    40m  7.035 MHz (håll dig inom CW-delen av bandet 7000-7040 kHz)
+    80m  3.555 MHz (Rekommenderad IARU frekvens för QRS)
+    160m Välj frekvens fritt enligt IARUs bandplan
 </pre>
+
+
+
+
 <p>QRP CW Calling Frequencies to be avoided by non-QRP (cq calling)
 stations. 1843; 3560; 7030; 10116; 14060; 18096; 21060; 24906;
 28060 kHz.</p>
