Complete the translation

--- a/euqrs.html
+++ b/euqrs.html
@@ -96,7 +96,7 @@ C - Lyssnaramatörer.<br>
   centrumfrekvenserna nedan, inklusive WARC-banden (see nedan).</p>
 <p>Naturligtvis, icke-QRP-stationer ska inte ropa CQ på populära
   QRP-frekvenser (se nedan). Håll dig innanför den delen av
-  amatörradiobanden som är reserverad för CW enligt nuvarande
+  amatörradiobanden som är reserverad för telegrafi enligt nuvarande
   bandblan.  Det här är en aktivitet och inte en contest så det finns
   ingen anledning att undvika de contest-fria segmenten.</p>
 <h3>NYCKLAR och HASTIGHET</h3>
@@ -159,7 +159,7 @@ visar sig att du är en av de mest aktiva stationerna.</p>
     2) Tid i UTC (som HHMM) 
     3) Anropssignal (för den andra stationen) 
     4) Band 
-    5) Mode (=CW) 
+    5) Mode (=CW dvs. telegrafi)
     6) RST som gavs till den andra stationen
     7) RST mottaget från den andra stationen
     8) Namn mottaget från den andra stationen
@@ -248,44 +248,55 @@ visar sig att du är en av de mest aktiva stationerna.</p>
     17m 18.085 MHz 
     20m 14.055 MHz (Rekommenderad IARU frekvens för QRS)
     30m 10.125 MHz 
-    40m  7.035 MHz (håll dig inom CW-delen av bandet 7000-7040 kHz)
+    40m  7.035 MHz (håll dig inom telegrafidelen av bandet 7000-7040 kHz)
     80m  3.555 MHz (Rekommenderad IARU frekvens för QRS)
     160m Välj frekvens fritt enligt IARUs bandplan
 </pre>
 
+<p>Undvik att ropa CQ på de anropsfrekvenser som används för QRP om du
+  inte är en QRP-station.  1843; 3560; 7030; 10116; 14060; 18096;
+  21060; 24906; 28060 kHz.</p>
+<p>När det är bra konditioner mot nordamerika så är det bra att tänka
+  på att frekvenserna 14056.5, 18091.5, 21056.5, 10122.5 ofta använs
+  för mobil nödtrafik och nät för folk som jagar county med dussintals
+  intresserade jägare.</p>
+<p>Dessa rekommenationer ges som en hjälp att hitta andra
+  QRS-deltagare men de är inte regler som måste uppfyllas.  Likväl,
+  duktiga operatörer känner till och respekterar IARUs bandplan som är
+  väletablerat i den internationeller amatörradiogemenskapen.  Ladda
+  ner en kopia av bandplanen
+  från <a href="http://iaru.org">iaru.org</a> innan sändaren slås på.
+  Undvik den lägre delen av telegrafidelen av banden.</p>
+<p>De vänner av telegrafi som ännu inte är redo att sända på telegrafi
+  är välkomna att läsa <a href="euqrsswl.html">SWL</a>-reglerna.</p>
 
-
-
-<p>QRP CW Calling Frequencies to be avoided by non-QRP (cq calling)
-stations. 1843; 3560; 7030; 10116; 14060; 18096; 21060; 24906;
-28060 kHz.</p>
-<p>Under good North America condx 14056.5, 18091.5, 21056.5,
-10122.5 are often used as frequencies of the Mobile Emergency and
-County Hunters Net where dozens of stations participate.</p>
-<p>These recommendations are given as a help to find other QRS
-partners they are not binding. However, decent operators know and
-respect the IARU band plan which is established by the
-international community of hams. Download a copy of the band plan
-at iaru.org before switching on a TX. Try to avoid the lower end of
-the CW bands.</p>
-<p>New friends of CW who do not yet feel ready to put their CW on
-air are invited to read the <a href="euqrsswl.html">SWL</a>
-rules.</p>
-<p>RESULT LISTS</p>
-<p><a href="euqrs01.html">2001</a> <a href=
-"euqrs02.html">2002</a> <a href="euqrs03.html">2003</a>
-<a href="euqrs04.html">2004</a> <a href="euqrs05.html">2005</a>
-<a href="euqrs06.html">2006</a> <a href="euqrs07.html">2007</a>
-<a href="euqrs08.html">2008</a> <a href="euqrs09.html">2009</a>
-<a href="euqrs10.html">2010</a> <a href="euqrs11.html">2011</a>
-<a href="euqrs12.html">2012</a> <a href="euqrs13.html">2013</a>
-<a href="euqrs14.html">2014</a> <a href="euqrs15.html">2015</a>
-<a href="euqrs16.html">2016</a> <a href="euqrs17.html">2017</a> 
-<a href="euqrs18.html">2018</a> <a href="euqrs19.html">2019</a>
-<a href="euqrs20.html">2020</a> <a href="euqrs21.html">2021</a>
-<a href="euqrs22.html">2022</a> <a href="euqrs23.html">2023</a> 
+<p>RESULTATLISTOR</p>
+<p>
+<a href="https://eucw.org/euqrs01.html">2001</a>
+<a href="https://eucw.org/euqrs02.html">2002</a>
+<a href="https://eucw.org/euqrs03.html">2003</a>
+<a href="https://eucw.org/euqrs04.html">2004</a>
+<a href="https://eucw.org/euqrs05.html">2005</a>
+<a href="https://eucw.org/euqrs06.html">2006</a>
+<a href="https://eucw.org/euqrs07.html">2007</a>
+<a href="https://eucw.org/euqrs08.html">2008</a>
+<a href="https://eucw.org/euqrs09.html">2009</a>
+<a href="https://eucw.org/euqrs10.html">2010</a>
+<a href="https://eucw.org/euqrs11.html">2011</a>
+<a href="https://eucw.org/euqrs12.html">2012</a>
+<a href="https://eucw.org/euqrs13.html">2013</a>
+<a href="https://eucw.org/euqrs14.html">2014</a>
+<a href="https://eucw.org/euqrs15.html">2015</a>
+<a href="https://eucw.org/euqrs16.html">2016</a>
+<a href="https://eucw.org/euqrs17.html">2017</a> 
+<a href="https://eucw.org/euqrs18.html">2018</a>
+<a href="https://eucw.org/euqrs19.html">2019</a>
+<a href="https://eucw.org/euqrs20.html">2020</a>
+<a href="https://eucw.org/euqrs21.html">2021</a>
+<a href="https://eucw.org/euqrs22.html">2022</a>
+<a href="https://eucw.org/euqrs23.html">2023</a> 
 </p>
 <P>
-The QRS Week is sponsored and organized by AGCW-DL.
+EUCWs QRS-vecka sponsras och organiseras av AGCW-DL.
 </body>
-<a href="dp.pdf"><FONT size="-2">Privacy Policy</FONT></a></html>
+<a href="dp.pdf"><FONT size="-2">Integritetspolicy (ej översatt)</FONT></a></html>
