Fix link to Privacy policy

--- a/euqrs.html
+++ b/euqrs.html
@@ -299,4 +299,4 @@ visar sig att du är en av de mest aktiva stationerna.</p>
 <P>
 EUCWs QRS-vecka sponsras och organiseras av AGCW-DL.
 </body>
-<a href="dp.pdf"><FONT size="-2">Integritetspolicy (ej översatt)</FONT></a></html>
+<a href="https://eucw.org/dp.pdf"><FONT size="-2">Integritetspolicy (ej översatt)</FONT></a></html>
