Add a warning on things that are not available in translated form

--- a/euqrs.html
+++ b/euqrs.html
@@ -268,9 +268,12 @@ visar sig att du är en av de mest aktiva stationerna.</p>
   från <a href="http://iaru.org">iaru.org</a> innan sändaren slås på.
   Undvik den lägre delen av telegrafidelen av banden.</p>
 <p>De vänner av telegrafi som ännu inte är redo att sända på telegrafi
-  är välkomna att läsa <a href="euqrsswl.html">SWL</a>-reglerna.</p>
+  är välkomna att
+  läsa <a href="https://eucw.org/euqrsswl.html">SWL</a>-reglerna (ej
+  översatta).</p>
 
 <p>RESULTATLISTOR</p>
+<p>(ej översatta)</p>
 <p>
 <a href="https://eucw.org/euqrs01.html">2001</a>
 <a href="https://eucw.org/euqrs02.html">2002</a>
