Fix the spelling and some language

--- a/euqrs.html
+++ b/euqrs.html
@@ -44,16 +44,16 @@ translated: 2024-03-16
 <a href="euqrs.html">
 <img src="f/se.gif" width="30" height="20" alt="SV"></a>
 <h3>Allmänt</h3>
-<p>EUCW bjuder hjärtligt in alla radioamatörer och SWLs att vara med i
-  den årliga EUCWs QRS-vecka.  Det här är inte en contest, tvärtom är
-  det en inbjudan till minska hastigheten och njuta av aktivitet i
-  långsam morse-takt under fem dagar.  Dagarna är valda för att
-  undvika de contest fyllda veckosluten.  Målet är inte att visa upp
-  sig och konkurrera utan att minska tröskeln för nykompligar som vill
-  prova på telegrafi.  Inställningen ska vara att delta som en service
-  till potentiella nykomlingar.  Det här kommer inte att ge er ära och
-  berömmelse men kan hjälpa andra även om det kan vara lite prövande
-  för tålamodet.</p>
+<p>EUCW bjuder hjärtligt in alla radioamatörer och lyssnaramatörer att
+  vara med i den årliga EUCWs QRS-vecka.  Det här är inte en tävling
+  (contest), tvärtom är det en inbjudan till minska hastigheten och
+  njuta av aktivitet i långsam morse-takt under fem dagar.  Dagarna är
+  valda för att undvika de contest-fyllda veckosluten.  Målet är inte
+  att visa upp sig och konkurrera utan att minska tröskeln för
+  nykomlingar som vill prova på telegrafi.  Inställningen ska vara att
+  delta som en service till potentiella nykomlingar.  Det här kommer
+  inte att ge er ära och berömmelse men kan hjälpa andra även om det
+  kan vara lite prövande för tålamodet.</p>
 <p>Kör vilken station som helst, även medlemmar i EUCW-klubbar, men
   använd bara QRS.  Vanliga QSO:n med icke-deltagande stationen kan
   finnas med i loggarna.</p>
@@ -63,22 +63,23 @@ translated: 2024-03-16
   decenniet.  Sedan 2012 organiseras EUCWs QRS-vecka av AGCW.  Ett
   erkännande delas ut till de mest aktiva deltagarna.</p>
 <p>De som vill kan markera deltagare som utmärker sig med upp till tre
-  röster för den "mest läsbara telegrafin" (en röst per station).  Om du
-  inte vill rösta så anmäl det i loggen.</p>
+  röster för den "mest läsbara telegrafin" (en röst per station).  Om
+  du inte vill rösta så anmäl det i loggen.</p>
 <h3>Datum och tid</h3>
 <p>Från måndag 0000z till fredag 2359z i veckan efter den fjärde
   söndagen i april.</p>
 <pre>
     Dvs.
     2024: 29e april, 00:00 UTC till 3e maj, 23:59 UTC
-    2025: 28e april, 00:00 UTC till 2e May, 23:59 UTC
+    2025: 28e april, 00:00 UTC till 2e maj, 23:59 UTC
 </pre>
 <h3>MODER</h3>
-CW/A1A (Datorer som hjälper till att avkoda telegrafin är inte tillåtna)
+<p>CW/A1A (Datorer som hjälper till att avkoda telegrafin är inte
+  tillåtna)</p>
 <h3>Klasser</h3>
 <br>
 A - Mer än 10W input eller 5W ut<br>
-B - QRP (10w input or 5w ut, eller mindre)<br>
+B - QRP (10w input eller 5w ut, eller mindre)<br>
 C - Lyssnaramatörer.<br>
 <p>Det finns också en osynlig klass av deltagande EUCW-klubbar.  Du
   kan knyta ditt deltagande till den EUCW-klubb som du väljer.  Lägg
@@ -93,18 +94,18 @@ C - Lyssnaramatörer.<br>
   nykomlingar kan vara blyga och föredrar att välja de stationer som
   de lätta kan tolka.</p>
 <p>Rekommenderat frekvensområde (inget krav) är +/- 10 kHz från
-  centrumfrekvenserna nedan, inklusive WARC-banden (see nedan).</p>
+  centrumfrekvenserna nedan, inklusive WARC-banden (se nedan).</p>
 <p>Naturligtvis, icke-QRP-stationer ska inte ropa CQ på populära
-  QRP-frekvenser (se nedan). Håll dig innanför den delen av
+  QRP-frekvenser (se nedan).  Håll dig innanför den delen av
   amatörradiobanden som är reserverad för telegrafi enligt nuvarande
-  bandblan.  Det här är en aktivitet och inte en contest så det finns
-  ingen anledning att undvika de contest-fria segmenten.</p>
+  bandblan.  Det här är en aktivitet och inte en tävling så det finns
+  ingen anledning att undvika de tävlingsfria segmenten.</p>
 <h3>NYCKLAR och HASTIGHET</h3>
-<p>Använd vilken typ av nyckel du vill. Det är inte tillåtet att
+<p>Använd vilken typ av nyckel du vill.  Det är inte tillåtet att
   använda tangentbord eller förprogrammerade meddelanden från datorer
   och minnesbuggar, men förprogrammerade CQ-anrop som repeteras är
   tillåtet.  Max-hastigheten är 70 tecken per minut (14 WPM).  Om den
-  som svarar gör det i långammare takt ska den som ropade CQ anpassa
+  som svarar gör det i långsammare takt ska den som ropade CQ anpassa
   sin hastighet till den takten.  De som använder förprogrammerade
   CQ-anrop ska inte förvirra och försvåra för de som anropar genom att
   byta till personlig och svårläst stil efter anropet.</p>
@@ -114,10 +115,10 @@ C - Lyssnaramatörer.<br>
   Du får ha kontakt med vilken station som helst i vilket land som
   helst, inklusive stationer som inte deltar i QRS-partyt men försök
   att övertyga dem att köra QRS.</p>
-<p>Ge realistisk RST-värde. Undvik att ge alla 599 av slentrian.</p>
-<p>Principen att alla stationer är likvärdiga oavsett hur remarkabla
+<p>Ge realistisk RST.  Undvik att ge alla 599 av slentrian.</p>
+<p>Principen att alla stationer är likvärdiga oavsett hur speciella
   deras prefix och suffix är.  Målet är att skapa så mycket QRS-trafik
-  som möjligt så kör gärna dina QSO-vänner varje dat.</p>
+  som möjligt så kör gärna dina QSO-vänner varje dag.</p>
 <h3>LOGGAR</h3>
 <p>Alla loggar består av två delar.  En förtasida (sammanfattande blad)
 och listan av QSO.</p>
@@ -129,27 +130,27 @@ och listan av QSO.</p>
     2) Namn och QTH (som användes under aktiviteten)
     3) Adress
     4) En EUCW-klubben som du är medlem i
-    5) Klass (A=QRO, B=QRP eller C=SWL)
-    6) Antal giltiga QSOn
+    5) Klass (A=QRO, B=QRP eller C=lyssnaramatörer)
+    6) Antal giltiga QSO:n
     7) Dina röster för mest lästbara telegrafin
     8) Hur du vill ha ditt erkännande: PDF eller papper. 
 </pre>
 <p>
-
 Du kan lägga till så mycket information som du vill.  Du kan
 dokumentera detaljer om dina sändningar så som till exempel
 alternativa QTH (en station i Södertälje kanske har för vana att ange
 staden som QTH i kontakt med svenska stationer medan QTH:t anges som
-NR STOCKHOLM i kontakt med andra länder.  Några kanske angera olika
+NR STOCKHOLM i kontakt med andra länder.  Några kanske anger olika
 namn så som Lennart i kontakt med svenskar, Lenny i kontakter med
-europa och Len i kontakt med DX.  Om du väljer att identifiera den
+Europa och Len i kontakt med DX.  Om du väljer att identifiera den
 klubb du är med i på ett inkonsistent sätt så kanske du ska ange det
 också.  Den här extra informationen är mycket användbar för
-potentiella SWL-loggar.  Slutligen bör du berätta om du vill ha ett
-elektroniskt erkännande (PDF) eller ett erkännande på papper om det
-visar sig att du är en av de mest aktiva stationerna.</p>
+(eventuella) loggar från lyssnaramatörer.  Slutligen bör du berätta om
+du vill ha ett elektroniskt erkännande (PDF) eller ett erkännande på
+papper om det visar sig att du är en av de mest aktiva
+stationerna.</p>
 
-<h3>LOG QSO DATA</h3>
+<h3>QSO DATA I LOGGEN</h3>
 
 <p>Åtminstone följande information ska finnas för varje QSO:</p>
 
@@ -167,7 +168,7 @@ visar sig att du är en av de mest aktiva stationerna.</p>
 </pre>
 
 <p>Försök undvika loggprogramvara som fyller i namn och QTH från
-  uppslagningar i Callbook eller på Internet.  Skriv istället ner det
+  uppslagning i Callbook eller på Internet.  Skriv istället ner det
   som du tar emot under kontakten.</p>
 
 <p>För sänd RST, mottagen RST, Namn och QTH så måste kolumnerna finnas
@@ -180,41 +181,41 @@ visar sig att du är en av de mest aktiva stationerna.</p>
   finns tre möjliga fall.</p>
 <pre>
     I) Din logg är skapad på datorn.
-       <a href="https://eucw.org/euqrsi.html">Här finns ett exempel för loggen I)</a>
-    II) Din har loggat på papper men du har Internet access.  
-       <a href="https://eucw.org/euqrsii.html">Här finns ett exempel för en sådan logg II)</a>
+       <a href="https://eucw.org/euqrsi.html">Här finns ett exempel för en sådan logg</a>
+    II) Din har loggat på papper men du har tillgång till Internet.
+       <a href="https://eucw.org/euqrsii.html">Här finns ett exempel för en sådan logg</a>
     III) Logg på papper och loggen skickas in på papper.
-       <a href="https://eucw.org/euqrsiii.html">Här finns ett sådant exempel logg III)</a>
+       <a href="https://eucw.org/euqrsiii.html">Här finns ett sådant exempel logg</a>
 </pre>
 
 <p>I) Användare av logg-programvara exporterar deras logg som
-  ADIF-filer (suffix .adi) och kollar att minst det förväntade datat
-  finns med.  Glöm inte att lägga till information till loggens
-  förstasida i texten i mailet.  Kom ihåg att kolla att ADIF-filen
-  innehåller allal element.  Vissa ADIF-skapar hoppar över relevanta
-  fält.  Tips, ladda ner FISTS Log-konverterar och använd den för att
-  efterprocessa loggen (Se kapitlet
+  ADIF-filer (suffix .adi) och kollar att minst den förväntade
+  informationen finns med.  Glöm inte att lägga till information till
+  loggens förstasida i texten i emailet.  Kom ihåg att kolla att
+  ADIF-filen innehåller alla element.  Vissa ADIF-verktyg hoppar över
+  relevanta fält.  Tips, ladda ner FISTS Log-konverterar och använd
+  den för att efterprocessa loggen (Se kapitlet
   <a href="#REKOMMENDERAD_MJUKVARA">REKOMMENDERAD MJUKVARA</a>).</p>
 
-<p>II) Om du översätter loggen manuellt är det äst att skicka datat
-  till en logg-programvara och exportera som ADIF på samma sätt som är
-  beskrivet ovan.  Om du vill skapa filerna manuellt från ingenting
-  med en editor eller spreadsheet-mjukvara, skapa .txt eller
-  .csv-filer kodade i ASCII-format så att det inte behövs någon
-  speciell mjukvara.  Om du kan välja avgränsare mellan fälten så välj
-  semikolon.  Glöm inte header-datat.</p>
+<p>II) Om du översätter loggen manuellt är det bäst att skriva in
+  informationen i ett logg-program och exportera som ADIF på samma
+  sätt som är beskrivet ovan.  Om du vill skapa filerna manuellt från
+  ingenting med en editor eller ett kalkylbladprogram, skapa .txt
+  eller .csv-filer kodade i ASCII-format så att det inte behövs någon
+  speciell mjukvara.  Om du kan välja fältavgränsare mellan fälten så
+  välj semikolon.  Glöm inte förstasidan.</p>
 
 <p>III) Handskrivna loggar är helt ok.  Det minst jobbiga är att ta en
-  kopia på orignalloggen eller att be en släkting eller kompis att ta
+  kopia på originalloggen eller att be en släkting eller kompis att ta
   en bild, kolla att det är läsbart och maila den.</p>
 
 <p>Huvudidén är att någon logg är bättre än ingen logg alls precis som
   en del av ett QSO är bättre än inget QSO.  EUCWs QRS-vecka är i
-  första hand inte någon tavling utan ett tillfälle för nykomplingar
+  första hand inte någon tävling utan ett tillfälle för nykomlingar
   på telegrafi och personer som är skeptiska till telegrafi att njuta
   av morse-kod utan risk för hög hastighet.  Om du har möjlighet att
-  välja så väl format II.  Vissa användare tycker det är svårt att
-  inte använda spreadsheet-program.  Om du är en av dem, fyll i all
+  välja så väl format II).  Vissa användare tycker det är svårt att
+  inte använda kalkylbladsprogram.  Om du är en av dem, fyll i all
   information i alla fält och använda YYYYMMDD-formatet.</p>
 
 <h3><a name="REKOMMENDERAD_MJUKVARA">REKOMMENDERAD MJUKVARA</a></h3>
@@ -223,12 +224,12 @@ visar sig att du är en av de mest aktiva stationerna.</p>
     för att skapa loggen för att skicka in i EUCWs QRS-vecka.  Det kan
     antingen läsa QSO:n från en ADIF-fil exporterad från olika
     loggningsprogram, eller, om du inte använder något
-    loggningsprogram, kan den inbyggda loggboksfunktionen användas för
-    att skapa en elektronisk loggbok.  De som använder andra
-    operativsystem kan föredra loggningen enligt alternativ I.  Om du
+    loggningsprogram, kan den inbyggda loggboks-funktionen användas
+    för att skapa en elektronisk loggbok.  De som använder andra
+    operativsystem kan föredra loggningen enligt alternativ I).  Om du
     har ett modernt loggningsprogram så slå av funktionen som
     automatiskt fyller i namn och QSO genom att använda lokala
-    databaser eller hämtar informationen från internet.  Du måste mata
+    databaser eller hämtar informationen från Internet.  Du måste mata
     in det namn och QTH som användes under QSO:t, annars kan det bli
     avdrag.</p>
 
@@ -257,20 +258,20 @@ visar sig att du är en av de mest aktiva stationerna.</p>
   inte är en QRP-station.  1843; 3560; 7030; 10116; 14060; 18096;
   21060; 24906; 28060 kHz.</p>
 <p>När det är bra konditioner mot nordamerika så är det bra att tänka
-  på att frekvenserna 14056.5, 18091.5, 21056.5, 10122.5 ofta använs
+  på att frekvenserna 14056.5, 18091.5, 21056.5, 10122.5 ofta används
   för mobil nödtrafik och nät för folk som jagar county med dussintals
   intresserade jägare.</p>
-<p>Dessa rekommenationer ges som en hjälp att hitta andra
+<p>Dessa rekommendationer ges som en hjälp att hitta andra
   QRS-deltagare men de är inte regler som måste uppfyllas.  Likväl,
   duktiga operatörer känner till och respekterar IARUs bandplan som är
-  väletablerat i den internationeller amatörradiogemenskapen.  Ladda
+  väletablerat i den internationella amatörradio-gemenskapen.  Ladda
   ner en kopia av bandplanen
   från <a href="http://iaru.org">iaru.org</a> innan sändaren slås på.
   Undvik den lägre delen av telegrafidelen av banden.</p>
 <p>De vänner av telegrafi som ännu inte är redo att sända på telegrafi
   är välkomna att
-  läsa <a href="https://eucw.org/euqrsswl.html">SWL</a>-reglerna (ej
-  översatta).</p>
+  läsa <a href="https://eucw.org/euqrsswl.html">reglerna för
+  lyssnaramatörer (ej översatta)</a>.</p>
 
 <p>RESULTATLISTOR</p>
 <p>(ej översatta)</p>
