--- a/euqrs.html
+++ b/euqrs.html
@@ -5,7 +5,7 @@ translated: 2024-03-16
 <html>
 <head>
 <title>EUCWs QRS-vecka</title>
-<link rel="SHORTCUT ICON" href="eucw.ico">
+<link rel="SHORTCUT ICON" href="https://eucw.org/eucw.ico">
 </head>
 <body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
 "purple">
@@ -20,29 +20,29 @@ translated: 2024-03-16
 </tr>
 </table>
 <p align="center">Översättning av regler<br>
-<a href="d/Deuqrs.html">
-<img src="f/de.gif" width="30" height="20" alt="DE"></a>
+<a href="https://eucw.org/d/Deuqrs.html">
+<img src="https://eucw.org/f/de.gif" width="30" height="20" alt="DE"></a>
 &nbsp;
-<a href="pl-euqrs.html">
-<img src="f/pl.gif" width="30" height="20" alt="PL"></a>
+<a href="https://eucw.org/pl-euqrs.html">
+<img src="https://eucw.org/f/pl.gif" width="30" height="20" alt="PL"></a>
 &nbsp;
-<a href="hu-euqrs.html">
-<img src="f/hu.gif" width="30" height="20" alt="HU"></a>
+<a href="https://eucw.org/hu-euqrs.html">
+<img src="https://eucw.org/f/hu.gif" width="30" height="20" alt="HU"></a>
 &nbsp;
-<a href="fr-euqrs.html"> 
-<img src="f/fr.gif" width="30" height="20" alt="FR"></a>
+<a href="https://eucw.org/fr-euqrs.html"> 
+<img src="https://eucw.org/f/fr.gif" width="30" height="20" alt="FR"></a>
 &nbsp;
-<a href="es-euqrs.html">
-<img src="f/es.gif" width="30" height="20" alt="ES"></a>
+<a href="https://eucw.org/es-euqrs.html">
+<img src="https://eucw.org/f/es.gif" width="30" height="20" alt="ES"></a>
 &nbsp;
-<a href="it-euqrs.html">
-<img src="f/it.gif" width="30" height="20" alt="IT"></a>
+<a href="https://eucw.org/it-euqrs.html">
+<img src="https://eucw.org/f/it.gif" width="30" height="20" alt="IT"></a>
 &nbsp;
-<a href="cz-euqrs.html">
-<img src="f/cz.gif" width="30" height="20" alt="IT"></a>
+<a href="https://eucw.org/cz-euqrs.html">
+<img src="https://eucw.org/f/cz.gif" width="30" height="20" alt="IT"></a>
 &nbsp;
 <a href="euqrs.html">
-<img src="f/se.gif" width="30" height="20" alt="SV"></a>
+<img src="https://eucw.org/f/se.gif" width="30" height="20" alt="SV"></a>
 <h3>Allmänt</h3>
 <p>EUCW bjuder hjärtligt in alla radioamatörer och lyssnaramatörer att
   vara med i den årliga EUCWs QRS-vecka.  Det här är inte en tävling
