Add English also to the list of languages

--- a/euqrs.html
+++ b/euqrs.html
@@ -19,7 +19,10 @@ translated: 2024-03-16
 <td align="right"><img src="agcw.gif" alt=""></td>
 </tr>
 </table>
-<p align="center">Översättning av regler<br>
+<p align="center">Reglerna på andra språk<br>
+<a href="https://eucw.org/euqrs.html">
+<img src="https://eucw.org/f/en.gif" width="30" height="20" alt="EN"></a>
+&nbsp;
 <a href="https://eucw.org/d/Deuqrs.html">
 <img src="https://eucw.org/f/de.gif" width="30" height="20" alt="DE"></a>
 &nbsp;
