Fix the English flag

--- a/euqrs.html
+++ b/euqrs.html
@@ -21,7 +21,7 @@ translated: 2024-03-16
 </table>
 <p align="center">Reglerna på andra språk<br>
 <a href="https://eucw.org/euqrs.html">
-<img src="https://eucw.org/f/en.gif" width="30" height="20" alt="EN"></a>
+<img src="https://eucw.org/f/uk.gif" width="30" height="20" alt="EN"></a>
 &nbsp;
 <a href="https://eucw.org/d/Deuqrs.html">
 <img src="https://eucw.org/f/de.gif" width="30" height="20" alt="DE"></a>
