Fix yet another spelling problem

--- a/euqrs.html
+++ b/euqrs.html
@@ -101,7 +101,7 @@ C - Lyssnaramatörer.<br>
 <p>Naturligtvis, icke-QRP-stationer ska inte ropa CQ på populära
   QRP-frekvenser (se nedan).  Håll dig innanför den delen av
   amatörradiobanden som är reserverad för telegrafi enligt nuvarande
-  bandblan.  Det här är en aktivitet och inte en tävling så det finns
+  bandplan.  Det här är en aktivitet och inte en tävling så det finns
   ingen anledning att undvika de tävlingsfria segmenten.</p>
 <h3>NYCKLAR och HASTIGHET</h3>
 <p>Använd vilken typ av nyckel du vill.  Det är inte tillåtet att
