--- a/euqrs.html
+++ b/euqrs.html
@@ -44,8 +44,12 @@ translated: 2024-03-16
 <a href="cz-euqrs.html">
 <img src="f/cz.gif" width="30" height="20" alt="IT"></a>
 &nbsp;
+<!--
+This link isn't working when this file is located in another filename.
+It isn't needed anyway since it should be pointing back to this page.
 <a href="euqrs.html">
 <img src="f/se.gif" width="30" height="20" alt="SV"></a>
+ -->
 <h3>Allmänt</h3>
 <p>EUCW bjuder hjärtligt in alla radioamatörer och lyssnaramatörer att
   vara med i den årliga EUCWs QRS-vecka.  Det här är inte en tävling
